// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreen when just made not visible 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "backgroundColor": "#1e1e1e",
      "height": "100vh",
      "opacity": 0,
      "padding": "40px 0 0 0",
      "textAlign": "center",
      "transition": "opacity 400ms",
      "width": "100vw",
    }
  }
>
  <span
    style={
      Object {
        "color": "white",
        "fontFamily": "Helvetica",
        "fontSize": "12pt",
      }
    }
  >
    Loading...
  </span>
</div>
`;

exports[`LoadingScreen when not visible after fadeout delay 1`] = `<Fragment />`;

exports[`LoadingScreen when visible 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "backgroundColor": "#1e1e1e",
      "height": "100vh",
      "opacity": 1,
      "padding": "40px 0 0 0",
      "textAlign": "center",
      "width": "100vw",
    }
  }
>
  <span
    style={
      Object {
        "color": "white",
        "fontFamily": "Helvetica",
        "fontSize": "12pt",
      }
    }
  >
    Loading...
  </span>
</div>
`;
